# lakebridge-web-app

./: .gitignore  Makefile  README.md  app.yml  databricks.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/: app.py  history.py  installer.py  recon_driver.py
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  runCommand.ts  types.ts
frontend/src/components/: Combobox.tsx  EnvFooter.tsx  FileUpload.tsx  Header.tsx  Icons.tsx  InsightsPanel.tsx  LakebridgeLogo.tsx  Layout.tsx  LineageGraph.tsx  OutputPanel.tsx  SetupScreen.tsx  Sidebar.tsx  UcSetupScreen.tsx  UcStatusPanel.tsx  useRun.ts
frontend/src/components/views/: AnalyzerView.tsx  ConverterView.tsx  HomeView.tsx  InstructionsView.tsx  LineageView.tsx  ProfilerView.tsx  ReconcileView.tsx
install/: install_lakebridge_app.py
scripts/: fetch_odbc.sh
tests/: test_app.py
